--- a/src/app/components/Components.module.css
+++ b/src/app/components/Components.module.css
@@ -630,6 +630,9 @@ border-radius:4px;
    }
 }
 @media(max-width:475px){
+  .product video{
+    height: unset !important;
+  }
   .resultCardWrap{
     grid-template-columns:repeat(1,1fr);
   }
