--- a/src/app/services/audio-production/css/slider.module.css
+++ b/src/app/services/audio-production/css/slider.module.css
@@ -59,7 +59,8 @@
   border-radius: 2px;
   width: 100%;
   max-width: 550px;
-  height: auto;
+  height: 320px;
+  object-fit: cover;
 
 }
 .slideText {
@@ -73,7 +74,7 @@
   z-index: 999999999;
   display: flex;
   gap: 30px;
-  bottom: 3rem;
+  bottom: 1.5rem;
 }
 
 .arrowButton {
@@ -94,7 +95,7 @@
 }
 
 .arrowLeft {
-right: 11rem;
+right: 8rem;
     bottom: 0;
 }
 
@@ -103,6 +104,10 @@ right: 11rem;
     bottom: 0;
 }
 
+.shiftLeft {
+  right: 11rem !important;
+  transition: right 0.4s ease;
+}
 .arrow {
   color: #ffffff;
   transition: transform 0.4s ease;
@@ -169,7 +174,7 @@ right: 11rem;
   }
   .arrowContainer{
     bottom: 2rem;
-    right: 3.3rem;
+    right: 5rem;
   }
 }
 
@@ -177,7 +182,11 @@ right: 11rem;
 
 .playPauseButton{
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%,-50%);
+    opacity: 0;
+}
+.slideContent:hover .playPauseButton {
+  opacity: 1;
 }
