--- a/src/app/services/audio-production/css/slider.module.css
+++ b/src/app/services/audio-production/css/slider.module.css
@@ -125,7 +125,7 @@ right: 8rem;
 
 .sliderHeaderContent{
   position: relative;
-  margin-bottom: 50px;
+  margin-bottom: 65px;
   display: flex;
   gap: 16px;
   flex-direction: column;
@@ -189,4 +189,14 @@ right: 8rem;
 }
 .slideContent:hover .playPauseButton {
   opacity: 1;
+}
+
+.videoOverlay{
+    position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0000004D; /* Adjust opacity/color as needed */
+  pointer-events: none;
 }
